# langgraph-studio

./: .gitignore  AGENTS.md
backend/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/api/: index.py
backend/app/: config.py
backend/app/routers/: langgraph.py  tech_research.py  workflow.py
backend/app/services/: article_service.py  code_review_service.py  email_approval_service.py  langgraph_service.py  llm_factory.py  parallel_service.py  pipeline_service.py  react_agent_service.py  routing_service.py  supervisor_service.py  tech_research_service.py  workflow_service.py
backend/tests/: __init__.py
frontend/: .env  .env.example  .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: index.ts
langgraph-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
langgraph-backend-python/: main.py  requirements.txt
langgraph-backend-python/app/: config.py
langgraph-backend-python/app/routers/: langgraph.py  tech_research.py  workflow.py
langgraph-backend-python/app/services/: __init__.py  article_service.py  email_approval_service.py  langgraph_service.py  parallel_service.py  pipeline_service.py  supervisor_service.py  (+1 more)
langgraph-backend/api/: index.ts
langgraph-backend/src/: app.controller.ts  app.module.ts  config.ts  main.ts
langgraph-ui/: package.json  pnpm-lock.yaml
langgraph-ui/src/: App.css  App.tsx
(+32 files in other folders)
