[project]
name = "langgraph-studio-backend"
version = "0.1.0"
description = "LangGraph Studio Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "langchain==1.2.17",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.2.1",
    "langgraph==1.2.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "aiohttp==3.10.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]